<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <View
            android:id="@+id/separator_center"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_centerVertical="true"/>

        <RelativeLayout
            android:id="@+id/layout_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@id/separator_center"
            android:layout_alignParentTop="true"
            android:background="#FFFFFF"
            android:padding="32dp">

            <TextView
                android:id="@+id/lbl_input_title"
                style="@style/TextAppearance.AppCompat.Title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:singleLine="true"
                android:text="@string/client_request"
                android:textColor="@color/primary"/>

            <EditText
                android:id="@+id/edit_a"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@id/lbl_input_title"
                android:layout_marginTop="16dp"
                android:backgroundTint="@color/primary"
                android:gravity="center_horizontal"
                android:inputType="numberDecimal"
                android:maxLength="3"
                android:maxWidth="100dp"
                android:minWidth="50dp"
                android:text="@string/value_1"
                android:textColor="@color/primary"/>

            <TextView
                style="@style/TextAppearance.AppCompat.Headline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@id/edit_a"
                android:layout_centerHorizontal="true"
                android:singleLine="true"
                android:text="@string/add"
                android:textColor="@color/primary"/>

            <EditText
                android:id="@+id/edit_b"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_below="@id/lbl_input_title"
                android:layout_marginTop="16dp"
                android:backgroundTint="@color/primary"
                android:gravity="center_horizontal"
                android:inputType="numberDecimal"
                android:maxLength="3"
                android:maxWidth="100dp"
                android:minWidth="50dp"
                android:text="@string/value_2"
                android:textColor="@color/primary"/>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/layout_ouput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_below="@id/separator_center"
            android:background="@color/primary"
            android:padding="32dp">

            <TextView
                android:id="@+id/lbl_output_title"
                style="@style/TextAppearance.AppCompat.Title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:singleLine="true"
                android:text="@string/server_response"
                android:textColor="#FFFFFF"/>

            <TextView
                android:id="@+id/lbl_output_result"
                style="@style/TextAppearance.AppCompat.Headline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/lbl_output_title"
                android:layout_marginTop="16dp"
                android:singleLine="true"
                android:textColor="#FFFFFF"/>

        </RelativeLayout>

    </RelativeLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/bt_send_request"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:layout_gravity="center"
        android:layout_margin="16dp"
        android:src="@drawable/ic_keyboard_arrow_down_white_24dp"
        android:tint="@color/primary"
        app:backgroundTint="#FFFFFF"
        app:elevation="6dp"
        app:layout_anchor="@id/separator_center"
        app:layout_anchorGravity="center"
        app:pressedTranslationZ="12dp"/>

</android.support.design.widget.CoordinatorLayout>